XMLtoCSV/objects/unpackaged/objects/Plan_Tactic_vod__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Plan Tactic to Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Plan Tactics</relationshipLabel>
        <relationshipName>Plan_Tactics_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Tactic_Progress_vod__c</fullName>
        <label>Account Tactic Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Account_Tactics_vod__c</fullName>
        <label>Completed Account Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Plan Tactic to Product</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Plan Tactics</relationshipLabel>
        <relationshipName>Plan_Tactics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Account_Tactics_vod__c</fullName>
        <label>Total Account Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Tactic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>